force-app/main/default/objects/Assessment_Settings__c/Assessment_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Assessment Settings</label>
</CustomObject>