force-app/main/default/objects/Assessment_Settings__c/fields/Chat_Button_Name__c.field-meta.xml
<CustomField>
    <fullName>Chat_Button_Name__c</fullName>
    <label>Chat Button Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>