force-app/main/default/objects/Assessment_Settings__c/fields/Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_URL__c</fullName>
    <label>Community URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>