force-app/main/default/objects/Assessment_Settings__c/fields/ESW_Channel_Menu_Name__c.field-meta.xml
<CustomField>
    <fullName>ESW_Channel_Menu_Name__c</fullName>
    <label>ESW Channel Menu Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>