force-app/main/default/objects/Assessment_Settings__c/fields/ESW_Live_Agent_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>ESW_Live_Agent_Dev_Name__c</fullName>
    <label>ESW Live Agent Dev Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>