force-app/main/default/objects/Assessment_Settings__c/fields/Live_Agent_Content_URL__c.field-meta.xml
<CustomField>
    <fullName>Live_Agent_Content_URL__c</fullName>
    <label>Live Agent Content URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>