force-app/main/default/objects/Assessment_Settings__c/fields/Live_Agent_URL__c.field-meta.xml
<CustomField>
    <fullName>Live_Agent_URL__c</fullName>
    <label>Live Agent URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>